Fix main screen broken on others pc

--- a/src/main/webapp/app/landing/list-item.component.css
+++ b/src/main/webapp/app/landing/list-item.component.css
@@ -84,6 +84,7 @@ a:hover {
 
 .number {
     float: left;
+    margin-top: 15px;
     margin-left: 10px;
 }
 
